@@ -34,6 +34,7 @@ import com.tc.test.server.util.AppServerUtil;
 import com.tc.util.Assert;
 import com.tc.util.runtime.Os;
 import com.tc.util.runtime.ThreadDump;
+import com.tc.util.runtime.Vm;
 import com.terracotta.session.util.ConfigProperties;
 
 import java.io.File;
@@ -53,19 +54,22 @@ import javax.servlet.http.HttpSessionListener;
 
 public abstract class AbstractAppServerTestCase extends TCTestCase {
 
-  private static final TCLogger             logger             = TCLogging.getLogger(AbstractAppServerTestCase.class);
+  private static final TCLogger             logger                     = TCLogging
+                                                                           .getLogger(AbstractAppServerTestCase.class);
 
-  private static final SynchronizedInt      nodeCounter        = new SynchronizedInt(-1);
-  private static final String               NODE               = "node-";
-  private static final String               DOMAIN             = "localhost";
+  private static final SynchronizedInt      nodeCounter                = new SynchronizedInt(-1);
+  private static final String               NODE                       = "node-";
+  private static final String               DOMAIN                     = "localhost";
 
-  protected final List                      appservers         = new ArrayList();
-  private final Object                      workingDirLock     = new Object();
-  private final List                        dsoServerJvmArgs   = new ArrayList();
-  private final List                        roots              = new ArrayList();
-  private final List                        locks              = new ArrayList();
-  private final List                        includes           = new ArrayList();
-  private final TestConfigObject            config             = TestConfigObject.getInstance();
+  private static final boolean              GC_LOGGGING                = false;
+
+  protected final List                      appservers                 = new ArrayList();
+  private final Object                      workingDirLock             = new Object();
+  private final List                        dsoServerJvmArgs           = new ArrayList();
+  private final List                        roots                      = new ArrayList();
+  private final List                        locks                      = new ArrayList();
+  private final List                        instrumentationExpressions = new ArrayList();
+  private final TestConfigObject            config                     = TestConfigObject.getInstance();
 
   private File                              serverInstallDir;
   private File                              sandbox;
@@ -78,11 +82,11 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
   private TerracottaServerConfigGenerator   configGen;
   private StandardTerracottaAppServerConfig configBuilder;
 
-  private List                              filterList         = new ArrayList();
-  private List                              listenerList       = new ArrayList();
-  private List                              servletList        = new ArrayList();
+  private List                              filterList                 = new ArrayList();
+  private List                              listenerList               = new ArrayList();
+  private List                              servletList                = new ArrayList();
 
-  private boolean                           isSynchronousWrite = false;
+  private boolean                           isSynchronousWrite         = false;
 
   public AbstractAppServerTestCase() {
     // keep the regular thread dump behavior for windows and macs
@@ -228,7 +232,11 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
   }
 
   protected final void addInclude(String expression) {
-    includes.add(expression);
+    instrumentationExpressions.add(InstrumentationExpression.makeInclude(expression));
+  }
+
+  protected final void addExclude(String expression) {
+    instrumentationExpressions.add(InstrumentationExpression.makeExclude(expression));
   }
 
   protected final void addConfigModule(String name, String version) {
@@ -274,6 +282,19 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
         for (int i = 0; i < jvmargs.length; i++) {
           params.appendJvmArgs(jvmargs[i]);
         }
+      }
+
+      if (!Vm.isIBM()) {
+        // InstrumentEverythingInContainerTest under glassfish needs this
+        params.appendJvmArgs("-XX:MaxPermSize=128m");
+      }
+
+      if (GC_LOGGGING && !Vm.isIBM()) {
+        params.appendJvmArgs("-verbose:gc");
+        params.appendJvmArgs("-XX:+PrintGCDetails");
+        params.appendJvmArgs("-Xloggc:"
+                             + new File(this.installation.sandboxDirectory(), NODE + nodeNumber + "-gc.log")
+                                 .getAbsolutePath());
       }
 
       addAppServerSpecificJvmArg(NewAppServerFactory.TOMCAT, params, "-Djvmroute=" + NODE + nodeNumber);
@@ -375,11 +396,8 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
   private static void assertNonInnerClass(Class clazz) {
     // Using inner classes for servlets, listeners, filters, etc is problematic under WAS 6.1
 
-    if (clazz.getName().indexOf('$') >= 0) {
-      throw new AssertionError("Inner class not allowed: " + clazz.getName());
-    }
+    if (clazz.getName().indexOf('$') >= 0) { throw new AssertionError("Inner class not allowed: " + clazz.getName()); }
   }
-
 
   private static boolean isListener(Class clazz) {
     return HttpSessionActivationListener.class.isAssignableFrom(clazz)
@@ -413,8 +431,15 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
     configBuilder.addInclude("com.tctest..*");
     configBuilder.addInclude("com.tctest..*$*");
 
-    for (Iterator iter = includes.iterator(); iter.hasNext();) {
-      configBuilder.addInclude((String) iter.next());
+    for (Iterator iter = instrumentationExpressions.iterator(); iter.hasNext();) {
+      InstrumentationExpression ie = (InstrumentationExpression) iter.next();
+      if (ie.isExclude()) {
+        configBuilder.addExclude(ie.getExpression());
+      } else if (ie.isInclude()) {
+        configBuilder.addInclude(ie.getExpression());
+      } else {
+        throw new AssertionError();
+      }
     }
 
     for (Iterator iter = roots.iterator(); iter.hasNext();) {
@@ -436,6 +461,38 @@ public abstract class AbstractAppServerTestCase extends TCTestCase {
 
   protected boolean isSessionTest() {
     return true;
+  }
+
+  private static class InstrumentationExpression {
+    private static final int INCLUDE = 1;
+    private static final int EXCLUDE = 2;
+    private final String     expression;
+    private final int        type;
+
+    static InstrumentationExpression makeInclude(String exp) {
+      return new InstrumentationExpression(INCLUDE, exp);
+    }
+
+    static InstrumentationExpression makeExclude(String exp) {
+      return new InstrumentationExpression(EXCLUDE, exp);
+    }
+
+    private InstrumentationExpression(int type, String expression) {
+      this.type = type;
+      this.expression = expression;
+    }
+
+    String getExpression() {
+      return expression;
+    }
+
+    boolean isExclude() {
+      return type == EXCLUDE;
+    }
+
+    boolean isInclude() {
+      return type == INCLUDE;
+    }
   }
 
 }
